# ESPotify

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  MORE.md  Makefile  README.md  httpd.py
.github/workflows/: main.yml
components/rfid_reader/: CMakeLists.txt  Kconfig  picc.h  pn532.c  pn532.h  rc522.c  rc522.h  rfid_reader.c  rfid_reader.h
components/rfid_reader/test/: CMakeLists.txt  test_pn532.c  test_rc522.c  test_rfid_reader.c
components/spotify/: CMakeLists.txt  Kconfig  README.md  spotify.c  spotify.h
docs/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  espotify.c  hardware.c  hardware.h  periph.c  periph.h  pn532.c  pn532.h  rc522.c  rc522.h  rfid.c  rfid.h  rfid_reader.c  rfid_reader.h  shared.c  shared.h  spotify.c  spotify.h  tasks.c  tasks.h
public/: index.html
test/: CMakeLists.txt  README.md
test/main/: CMakeLists.txt  test_app.c
utilities/: README.md  httpd.py  spot.fish  spotify_build_app_permissions_link.fish
utilities/py_debug/: README.md  pn532.py  requirements.txt
