idf_component_register(SRCS
                       "espotify.c"
                       "spotify.c"
                       "hardware.c"
                       "tasks.c"
                       "rfid_reader.c"
                       "rc522.c"
                       "pn532.c"
                       INCLUDE_DIRS ".")
